Fix button overlap on home page
#86

--- a/css/main.css
+++ b/css/main.css
@@ -265,21 +265,23 @@ nav a:hover{
 }
 
 #home-video #page-title #company{
-    display: inline-block;
+  display: inline-block;
 	border-bottom: 1px solid white;
 	padding-bottom: 10px;
-	}
+}
 
-#home-video #scroll-indicator{
-	width: 100%;
+#home-video #page-title div#scroll-indicator{
+	width: 200px;
+  left: 50%;
 	opacity: 0;
-	margin: 0 0 120px -50px;
+	margin: 0 0 120px -100px;
 	font-size: 20px;
 	line-height: 25px;
 	font-weight: bold;
 	color: #58A2D8;
 	text-align: center;
 	text-transform: uppercase;
+  padding: 0;
 }
 
 #scroll-indicator a:hover {
